# mcp-broker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-02-dokploy-ui-redesign.md  2026-06-03-standard-mcp-clients.md  2026-06-06-direct-mcp-catalog.md
docs/superpowers/specs/: 2026-06-02-dokploy-ui-redesign-design.md  2026-06-03-standard-mcp-clients-design.md  2026-06-06-direct-mcp-catalog-design.md
mcp_broker/: __init__.py  app.py  config.py  discovery.py  litellm_health.py  main.py  mcp_health.py  models.py  proxy.py  rate_limit.py  secret_headers.py  security.py  storage.py
mcp_broker/templates/: _secret_input.html  _shell.html  admin.html  dashboard.html  discover.html  litellm_health.html
tests/: conftest.py  test_config.py  test_dashboard.py  test_discovery.py  test_jwt_validator.py  test_litellm_health.py  test_mcp_health.py  test_oauth_metadata.py  test_proxy.py  test_rate_limit.py  test_storage.py
