[project]
name = "mcp-broker"
version = "0.1.0"
description = "OAuth MCP proxy for LiteLLM and Pocket ID"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "Authlib==1.7.2",
    "FastAPI==0.136.1",
    "PyJWT[crypto]==2.13.0",
    "SQLAlchemy[asyncio]==2.0.49",
    "aiosqlite==0.22.1",
    "asyncpg==0.31.0",
    "cryptography==48.0.0",
    "httpx==0.28.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "pydantic-settings==2.14.1",
    "python-multipart==0.0.27",
    "uvicorn[standard]==0.47.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
